--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@ body{
     font-family:Arial, Helvetica, sans-serif;
     color:#777777;
     font-size: 16px;
+    min-height: 100vmax;
 }
 
 .navbar-brand{
@@ -14,7 +15,7 @@ body{
 }
 .container-fluid{
     background-image: url(../images/background.png);
-    height:85vh;
+    min-height: 85vh;
 }
 .card-title{
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -25,12 +26,19 @@ body{
     max-width: 960px;
 }
 .card-body{
-    
     line-height: 2.0rem;
+    margin:0;
 }
-#img-portrait{
-    width: 200px;
-    height:150px;
+.img-portfolio{
+    padding-right:10%;
+    padding-top:10%;
+    padding-bottom:10%;
+    width:100%;
+    height:100%;
+}
+.img{
+    width: 300px;
+    height:200px;
 }
 .footer{
     flex-shrink: 0;
