--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,8 @@ body{
     width:100%;
     height:100%;
 }
-.img{
+
+.img-portrait{
     width: 300px;
     height:200px;
 }
@@ -47,4 +48,20 @@ body{
 }
 .btn-primary{
     background-color:#4aaaa5;
+}
+
+@media screen and (max-width: 640px){
+    .img-portrait{
+        width: 100%;
+        height: auto;
+    }
+    .navbar-brand{
+        width: 100%;
+        height: auto;
+        margin: 0;
+        text-align: center;
+    }
+    .navbar{
+        padding: 0;
+    }
 }
