using flex-row to wrap the nav item

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,18 +50,26 @@ body{
     background-color:#4aaaa5;
 }
 
-@media screen and (max-width: 640px){
+@media screen and (max-width: 768px){
     .img-portrait{
         width: 100%;
         height: auto;
     }
+    /*
     .navbar-brand{
         width: 100%;
         height: auto;
         margin: 0;
         text-align: center;
     }
+    */
     .navbar{
         padding: 0;
     }
+    /*
+    .navbar-nav{
+        flex-direction: row;
+        justify-content: center;
+    }
+    */
 }
