--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,18 +29,20 @@ body{
     line-height: 2.0rem;
     margin:0;
 }
-.img-portfolio{
-    padding-right:10%;
-    padding-top:10%;
-    padding-bottom:10%;
-    width:100%;
-    height:100%;
-}
 
 .img-portrait{
     width: 300px;
     height:200px;
 }
+
+.figure-caption{
+    background-color: #4aaaa5;
+    color: #ffffff;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 1.2rem;
+    margin-top: -5rem;
+}
+
 .footer{
     flex-shrink: 0;
     background-color:#666666;
@@ -50,26 +52,21 @@ body{
     background-color:#4aaaa5;
 }
 
+
 @media screen and (max-width: 768px){
     .img-portrait{
         width: 100%;
         height: auto;
     }
-    /*
+    
     .navbar-brand{
         width: 100%;
         height: auto;
         margin: 0;
         text-align: center;
     }
-    */
+   
     .navbar{
         padding: 0;
     }
-    /*
-    .navbar-nav{
-        flex-direction: row;
-        justify-content: center;
-    }
-    */
 }
